--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
 		Rsamtools,
 		data.table,
 		markdown,
-		stringr
+		stringr,
+		shinycssloaders
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
