--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: viromeBrowser
 Type: Package
 Title: Virome Sequencing Analysis Result Browser
-Version: 1.0.0
+Version: 1.1.0
 Authors@R: person("David", "Nieuwenhuijse", email = "d.nieuwenhuijse@erasmusmc.nl", role = c("aut", "cre"))
 Description: Experiments in which highly complex virome sequencing data is generated are difficult to visualize and unpack for a person without programming experience. 
     After processing of the raw sequencing data by a next generation sequencing (NGS) processing pipeline the usual output consists of contiguous sequences (contigs) in fasta format and an annotation file linking the 
@@ -25,11 +25,12 @@ Imports:
 		data.table,
 		markdown,
 		stringr,
-		shinycssloaders
+		shinycssloaders,
+		rhandsontable
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
