--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.1.0
 Authors@R: person("David", "Nieuwenhuijse", email = "d.nieuwenhuijse@erasmusmc.nl", role = c("aut", "cre"))
 Description: Experiments in which highly complex virome sequencing data is generated are difficult to visualize and unpack for a person without programming experience. 
     After processing of the raw sequencing data by a next generation sequencing (NGS) processing pipeline the usual output consists of contiguous sequences (contigs) in fasta format and an annotation file linking the 
-    contigs to a reference sequence. The virome analysis browser app imports an annotation file and a corresponding fasta file containing the annotated contigs. 
+    contigs to a reference sequence. The virome analysis browser app imports an annotation file, a corresponding fasta file containing the annotated contigs and a alignment file in BAM format of the sequence reads aligned to the contigs. 
     It facilitates browsing of annotations in multiple files and allows users to select and export specific annotated sequences from the associated fasta files. Various
     annotation quality thresholds can be set to filter contigs from the annotation files. Further inspection of selected contigs can be done in the form of automatic open
     reading frame (ORF) detection. Separate contigs and/or separate ORFs can be downloaded in nucleotide or amino acid format for further analysis.
@@ -14,19 +14,16 @@ Depends:
 Imports:
     shiny (>= 1.3.2),
 		shinyWidgets,
-		plyr,
 		ggplot2,
 		shinydashboard,
 		DT,
-		reshape,
 		rbokeh,
 		Biostrings,
 		Rsamtools,
 		data.table,
 		markdown,
 		stringr,
-		shinycssloaders,
-		rhandsontable
+		shinycssloaders
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
