--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ import(Rsamtools)
 import(data.table)
 import(ggplot2)
 import(markdown)
-import(rbokeh)
+import(plotly, except = last_plot)
 import(shiny)
 import(shinyWidgets)
 import(shinycssloaders)
